# Intraday_tool

./: .gitignore  README.md  antigravity_quant_system_tasks.md  app.py  backtest_out.txt  test_index.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: feature_importance_RELIANCE_lgbm.csv
intraday_quant_system/: .dockerignore  .env  .env.example  Dockerfile  README.md  config.yaml  docker-compose.yml  prometheus.yml  requirements.txt  run_simulation.py
intraday_quant_system/backtesting/: backtest_engine.py  cpcv_validator.py  monte_carlo.py  walk_forward.py
intraday_quant_system/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
intraday_quant_system/core_engine/: Cargo.toml  pyproject.toml
intraday_quant_system/core_engine/src/: lib.rs  websocket.rs
intraday_quant_system/data/: bar_aggregator.py  feature_importance_RELIANCE_xgboost.csv  fundamental_data.py  market_data.py  news_data.py  nse_calendar.py  websocket_ticker.py
intraday_quant_system/deployment/: config.py  pipeline_runner.py
intraday_quant_system/execution/: algorithms.py  execution_engine.py  order_manager.py  post_trade_analyzer.py  reconciliation.py
intraday_quant_system/features/: feature_store.py  flow_features.py  l2_microstructure.py  market_context_features.py  options_greeks.py  sentiment_features.py  time_features.py  trend_features.py  volatility_features.py
intraday_quant_system/meta_labeling/: meta_pipeline.py
(+277 files in other folders)
